Corrected spacing between image and article Title
* Added media query to set height of aside to 0px for desktop/tablet and auto for mobile
* Added missing punctuation to aside on airlines and news page
* Removed extra quote character from letter.html

--- a/css/style.css
+++ b/css/style.css
@@ -1917,6 +1917,7 @@ cite bold {
   display: none;
   color: var(--darkgrey);
   line-height: 17px;
+  height: auto;
 }
 
 .sidebar-bottom{
@@ -1926,6 +1927,7 @@ cite bold {
 @media (min-width: 700px) {
   .sidebar-top {
       display: block;
+      height: 0px;
   }
   .sidebar-bottom{
   display:none;
@@ -1935,6 +1937,7 @@ cite bold {
 @media (min-width:1080px){
   .sidebar-top {
       display: block;
+      height: 0px;
   }
   .sidebar-bottom{
   display:none;
